added grails scripts and ant targets to compile & run/jar a local grails app without grails executables